--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "azure-devops-node-api": "^11.2.0",
-    "node-fetch": "^3.2.10"
+    "azure-devops-node-api": "^11.2.0"
   }
 }
