--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Github Action to allow updating of a DevOps work item state.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ncc build ./src/main.js -o dist"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@vercel/ncc": "^0.34.0",
     "azure-devops-node-api": "^11.2.0"
   }
 }
