fix invalid yaml file!

--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
     description: 'Name of the Azure DevOps organization - e.g. orbitalwitness for dev.azure.com/orbitalwitness'
   gh_repo_owner:
     required: false
-    description: 'Name of the owner of the Github repository
+    description: 'Name of the owner of the Github repository'
   gh_repo:
     required: false
     description: 'Name of the Github repository'
