--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Github Action to allow updating of a DevOps work item state.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build ./src/main.js -o dist -a -C -s"
+    "build": "tsc",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
+    "lint": "eslint src/**/*.ts",
+    "package": "ncc build --source-map --license licenses.txt",
+    "all": "yarn run build && yarn run format && yarn run lint && yarn run package"
   },
   "repository": {
     "type": "git",
@@ -18,9 +22,19 @@
   },
   "homepage": "https://github.com/orbitalwitness/update-devops-work-item#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@vercel/ncc": "^0.34.0",
-    "azure-devops-node-api": "^11.2.0"
+    "@actions/core": "1.10.0",
+    "@actions/github": "5.1.1",
+    "azure-devops-node-api": "11.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "16.11.7",
+    "@typescript-eslint/parser": "5.42.0",
+    "@vercel/ncc": "0.34.0",
+    "eslint": "8.26.0",
+    "eslint-plugin-github": "4.4.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "js-yaml": "4.1.0",
+    "prettier": "2.7.1",
+    "typescript": "4.8.4"
   }
 }
